<resources>

    <string name="app_name">AvenueResto</string>
    <string name="service_url">http://192.168.98.1/Resto/WcfDataService.svc</string>
    <string name="menu_settings">Settings</string>
    <string name="table_count">30</string>
    <string name="title_activity_main">AvenueResto</string>
    <string name="qty">Quantity</string>
    <string name="totItems">Total Items</string>
    <string name="totAmt">Total Amount</string>
    <string name="send">Send</string>
    <string name="newOrd">New Order</string>
    <string name="ord">Orders</string>
    <string name="editOrd">Edit</string>
    <string name="ordertablelbl">Order/Table No.</string>
    <string name="customerNamelbl">Customer Name</string>
    <string name="customerAddresslbl">Customer Address</string>
    <string name="paxlbl">Pax</string>
    <string name="orderType">Order Type</string>
    <string name="close">Close</string>
    <string name="createOrderlbl">Create Order</string>
    <string name="na">N/A</string>
    <string name="star">*</string>
    <string name="one">1</string>
    <string-array name="orderType">
        <item>Dine In</item>
        <item>Take Out</item>
       
    </string-array>
    
</resources>